# cdrs

./: .gitignore  .travis.yml  CONTRIBUTORS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_1.md  appveyor.yml  benchmarks.md  cassandra-ports.txt  changelog.md  index.html  license.txt  rustfmt.toml  search-index.js  type-mapping.md
.github/: FUNDING.yml
_______examples/: read_table_into_struct.rs
appveyor/: appveyor.ps1
benches/: collection_types.rs  native_types.rs
benches/common/: mod.rs
cassandra-proto/: Cargo.toml
cassandra-proto/src/: compression.rs  consistency.rs  error.rs  lib.rs  macros.rs
cassandra-proto/src/frame/: frame_auth_response.rs  frame_auth_success.rs  frame_authenticate.rs  frame_batch.rs  frame_error.rs  frame_event.rs  frame_execute.rs  frame_options.rs  frame_prepare.rs  frame_query.rs  frame_register.rs  frame_response.rs  frame_startup.rs  frame_supported.rs  mod.rs  parser.rs  traits.rs
cassandra-proto/src/query/: batch_query_builder.rs  mod.rs  query.rs  query_flags.rs  query_params.rs  query_params_builder.rs  query_values.rs
cassandra-proto/src/types/: data_serialization_types.rs  list.rs  map.rs  mod.rs  rows.rs  value.rs
cdrs/: .gitignore  AsByte.t.html  Cargo.toml  FromCursor.t.html  FromSingleByte.t.html  IntoBytes.t.html  hi.m.html  index.html  macro.hi.html  rustfmt.toml  sidebar-items.js  trait.AsByte.html  trait.FromBytes.html  trait.FromCursor.html  trait.FromSingleByte.html  trait.IntoBytes.html
cdrs/__examples/: server_events.rs
cdrs/authenticators/: Authenticator.t.html  PasswordAuthenticator.t.html  index.html  sidebar-items.js  struct.PasswordAuthenticator.html  trait.Authenticator.html
cdrs/client/: CDRS.t.html  index.html  sidebar-items.js  struct.CDRS.html  struct.Credentials.html
cdrs/compression/: CompressionError.t.html  enum.Compression.html  enum.CompressionError.html  index.html  sidebar-items.js
cdrs/consistency/: Consistency.t.html  enum.Consistency.html  index.html  sidebar-items.js
cdrs/documentation/: batching-multiple-queries.md  cdrs-session.md  query-values.md
cdrs/error/: AdditionalErrorInfo.t.html  AlreadyExistsError.t.html  CDRSError.t.html  FunctionFailureError.t.html  ReadFailureError.t.html  ReadTimeoutError.t.html  SimpleError.t.html  UnavailableError.t.html  UnpreparedError.t.html  WriteFailureError.t.html  WriteTimeoutError.t.html  WriteType.t.html  enum.ErrorKind.html  (+18 more)
documentation/: README.md  batching-multiple-queries.md  cdrs-session.md  cluster-configuration.md  deserialization.md  making-query.md  preparing-and-executing-queries.md
examples/: README.md  all.rs  batch_queries.rs  cluster.rs  connection_pool.rs  create-table.rs  create_table.rs  crud_operations.rs  dynamic_cluster.rs  insert_collection.rs  insert_table_using_prepared_statment.rs  multiple_thread.rs  paged_query.rs  prepare_batch_execute.rs  prepare_execute.rs  read_table_into_struct.rs  readtableintoStruct.rs  server_events.rs  simple.rs  simple_with_auth.rs  version_2.rs
examples_old/: .gitignore  connection_pool.rs  create_table.rs  development.rs  simple.rs
src/: authenticators.rs  client.rs  cluster.rs  cluster_builder.rs  compression.rs  connection_manager.rs  consistency.rs  data_serialization_types.rs  error.rs  events.rs  frame.rs  frame_query.rs  frame_ready.rs  frame_response.rs  frame_response_result.rs  frame_response_rows.rs  frame_response_set_keyspace.rs  frame_response_void.rs  frame_result.rs  frame_startup.rs  lib.rs  macros.rs  main.rs  old_cluster.rs  old_query.rs  parser.rs  prepared_statement.rs  query.rs  transport.rs  transport_builder.rs  transport_ssl.rs  types.rs  value.rs
tests/: authenticators.rs  build-cluster.sh  collection_types.rs  compression.rs  consistency.rs  create_insert_table.rs  create_ks_and_table.rs  crud_operations.rs  derive_traits.rs  keyspace.rs  lib.rs  native_types.rs  query_values.rs  rows.rs  scylla-cluster.sh  simple_connect.rs  tuple_types.rs  user_defined_types.rs
tests_old/: create_insert_table.rs  simple_connect.rs  tuple_types.rs
(+376 files in other folders)
