[package]
name = "cdrs"
version = "2.3.0"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>"]
edition = "2018"

description = "Cassandra DB driver written in Rust"
documentation = "https://docs.rs/cdrs"
homepage = "https://github.com/AlexPikalov/cdrs"
repository = "https://github.com/AlexPikalov/cdrs"
readme = "./README.md"
keywords = ["cassandra", "driver", "client", "cassandradb", "DB"]
license = "MIT/Apache-2.0"

[features]
default = ["v4"]
ssl = ["tokio-tls", "native-tls"]
v3 = []
v4 = []
# enable v5 feature when it's actually implemented
# v5 = []
e2e-tests = []
# enables dynamic cluster adjustments basing on status
# changes server events
unstable-dynamic-cluster = []

[dependencies]
async-trait = "0.1.24"
byteorder = "1"
log = "0.4.1"
lz4-compress = "=0.1.0"
tokio-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
bb8 = "0.4"
rand = "0.4.1"
snap = "0.2.3"
time = "0.1.38"
tokio = { version = "0.2", features = ["tcp", "io-util", "dns", "sync", "macros"] }
uuid = "0.8.1"

[dev-dependencies]
env_logger = "0.4.3"
maplit = "1.0.0"
regex = "0.2.5"
cdrs_helpers_derive = "0.1.0"

[[example]]
name = "dynamic_cluster"
required-features = ["unstable-dynamic-cluster"]
