[package]
name = "cdrs"
version = "4.0.0-beta.1"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>"]
edition = "2018"

description = "Cassandra DB driver written in Rust"
documentation = "https://docs.rs/cdrs"
homepage = "https://github.com/AlexPikalov/cdrs"
repository = "https://github.com/AlexPikalov/cdrs"
readme = "./README.md"
keywords = ["cassandra", "driver", "client", "cassandradb", "DB"]
license = "MIT/Apache-2.0"

[features]
default = ["v4"]
ssl = ["openssl"]
rust-tls = ["rustls", "webpki"]
v3 = []
v4 = []
# enable v5 feature when it's actually implemented
# v5 = []
e2e-tests = []
# enables dynamic cluster adjustments basing on status
# changes server events
unstable-dynamic-cluster = []

[dependencies]
serde = "1.0.*"
byteorder = "1"
log = "0.4.1"
lz4-compress = "=0.1.0"
openssl = { version = "0.10", optional = true }
r2d2 = "0.8.7"
rand = "0.4.1"
snap = "0.2.3"
time = "0.2.16"
uuid = "0.8.1"
webpki = { version = "0.21", optional = true }

[dependencies.rustls]
version = "0.17"
optional = true
default-features = false

[dev-dependencies]
env_logger = "0.4.3"
maplit = "1.0.0"
regex = "0.2.5"
cdrs_helpers_derive = "0.4"

[[example]]
name = "dynamic_cluster"
required-features = ["unstable-dynamic-cluster"]
