[package]
name = "cassandra-proto"
version = "0.1.0"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>"]
edition = "2018"

[features]
default = ["v4"]
v3 = []
v4 = []
# enable v5 feature when it's actually implemented
# v5 = []
appveyor = []

[dependencies]
byteorder = "1"
log = "0.4.1"
rand = "0.4.1"
snap = "0.2.3"
time = "0.1.38"
uuid = "0.7"
